@@ -344,31 +344,52 @@
           (foreach complex double-float single-float))
          (complex-expt base power))))))
 
-;;; FIXME: Maybe rename this so that it's clearer that it only works
-;;; on integers?
-(declaim (inline log2))
-(defun log2 (x)
-  (declare (type integer x))
+(declaim (start-block log))
+(defun log2/nonnegative-integer (x)
+  (declare (type (integer 0) x))
   ;; CMUCL comment:
   ;;
-  ;;   Write x = 2^n*f where 1/2 < f <= 1.  Then log2(x) = n +
+  ;;   Write x = 2^n*f where 1/2 <= f < 1.  Then log2(x) = n +
   ;;   log2(f).  So we grab the top few bits of x and scale that
   ;;   appropriately, take the log of it and add it to n.
   ;;
   ;; Motivated by an attempt to get LOG to work better on bignums.
   (cond ((typep x 'sb-vm:signed-word)
-         (log (coerce x 'double-float) $2.0d0))
+         (%log2 (coerce x 'double-float)))
         (t
          (let ((n (integer-length x)))
            (cond ((< n sb-vm:double-float-digits)
-                  (log (coerce x 'double-float) $2.0d0))
+                  (%log2 (coerce x 'double-float)))
                  (t
                   (let ((f (ldb (byte sb-vm:double-float-digits
                                       (- n sb-vm:double-float-digits))
                                 x)))
-                    (+ n (log (scale-float (coerce f 'double-float)
-                                           (- sb-vm:double-float-digits))
-                              $2.0d0)))))))))
+                    (+ n (%log2 (scale-float (coerce f 'double-float)
+                                             (- sb-vm:double-float-digits)))))))))))
+
+(defun log2/double-float (x)
+  (declare (type double-float x))
+  (if (= (float-sign-bit x) 1)
+      (complex (%log2 (- x)) (sb-xc:/ pi (log $2d0)))
+      (%log2 x)))
+
+(defun log2/nonnegative-ratio (x)
+  (declare (type (and (rational 0) (not integer)) x))
+  (truly-the double-float
+             (- (truly-the double-float (log2/nonnegative-integer (numerator x)))
+                (truly-the double-float (log2/nonnegative-integer (denominator x))))))
+
+(defun log2/nonnegative-rational (x)
+  (declare (type (rational 0) x))
+  (if (typep x 'integer)
+      (log2/nonnegative-integer x)
+      (log2/nonnegative-ratio x)))
+
+(defun log2/rational (x)
+  (declare (type rational x))
+  (if (minusp x)
+      (complex (log2/nonnegative-rational (- x)) (sb-xc:/ pi (log $2d0)))
+      (log2/nonnegative-rational x)))
 
 (defun log (number &optional (base nil base-p))
   "Return the logarithm of NUMBER in the base BASE, which defaults to e."
@@ -379,22 +400,27 @@
          (if (or (typep number 'double-float) (typep base 'double-float))
              $0.0d0
              $0.0f0))
-        ((and (typep number '(integer (0) *))
-              (typep base '(integer (0) *)))
-         (coerce (/ (truly-the double-float (log2 number))
-                    (truly-the double-float (log2 base))) 'single-float))
-        ((and (typep number 'integer) (typep base 'double-float))
-         ;; No single float intermediate result
-         (/ (log2 number) (log base $2.0d0)))
-        ((and (typep number 'double-float) (typep base 'integer))
-         (/ (log number $2.0d0) (log2 base)))
+        ((and (typep number '(rational 0))
+              (typep base '(rational 0)))
+         (coerce (/ (truly-the double-float (log2/nonnegative-rational number))
+                    (truly-the double-float (log2/nonnegative-rational base)))
+                 'single-float))
+        ((and (typep number 'rational)
+              (typep base 'rational))
+         (coerce (/ (log2/rational number)
+                    (log2/rational base))
+                 '(complex single-float)))
+        ((and (typep number 'rational) (typep base 'double-float))
+         (/ (log2/rational number) (log2/double-float base)))
+        ((and (typep number 'double-float) (typep base 'rational))
+         (/ (log2/double-float number) (log2/rational base)))
         (t
          (/ (log number) (log base))))
       (number-dispatch ((number number))
         (((foreach fixnum bignum))
          (if (minusp number)
              (complex (log (- number)) (coerce pi 'single-float))
-             (coerce (/ (truly-the double-float (log2 number))
+             (coerce (/ (truly-the double-float (log2/nonnegative-integer number))
                         (log (exp $1.0d0) $2.0d0)) 'single-float)))
         ((ratio)
          (if (minusp number)
@@ -405,8 +431,8 @@
                       (integer-length denominator))
                    (coerce (%log1p (coerce (- number 1) 'double-float))
                            'single-float)
-                   (coerce (/ (- (truly-the double-float (log2 numerator))
-                                 (truly-the double-float (log2 denominator)))
+                   (coerce (/ (- (truly-the double-float (log2/nonnegative-integer numerator))
+                                 (truly-the double-float (log2/nonnegative-integer denominator)))
                               (log (exp $1.0d0) $2.0d0))
                            'single-float)))))
         (((foreach single-float double-float))
@@ -419,6 +445,7 @@
                      '(dispatch-type number))))
         ((complex)
          (complex-log number)))))
+(declaim (end-block))
 
 (defun sqrt (number)
   "Return the square root of NUMBER."
