@@ -278,6 +278,29 @@
     (assert (eql 0.0d0 (funcall f 123.0d0 0.0d0)))
     (assert (eql 0.0d0 (funcall f 123.0 0.0d0)))))
 
+(with-test (:name (:log2 :non-negative-powers-of-two))
+  (let ((diffs
+          (loop for i from 0 to 128
+                for x = (log (expt 2 i) 2.0d0)
+                if (or (not (typep x 'double-float)) (/= x i)) collect (cons i x))))
+    (assert (null diffs))))
+
+(with-test (:name (:log2 :negative-powers-of-two))
+  (let ((diffs
+          (loop for i from -128 to -1
+                for x = (log (expt 2 i) 2.0d0)
+                if (or (not (typep x 'double-float)) (/= x i)) collect (cons i x))))
+    (assert (null diffs))))
+
+(with-test (:name (:log2 :powers-of-two-negative))
+  (let ((diffs
+          (loop for i from -128 to 128
+                for x = (log (- (expt 2 i)) 2.0d0)
+                if (or (not (typep x '(complex double-float)))
+                       (/= (realpart x) i))
+                collect (cons i x))))
+    (assert (null diffs))))
+
 ;; Bug reported by Eric Marsden on July 15 2009. The compiler
 ;; used not to constant fold calls with arguments of type
 ;; (EQL foo).
